--- a/src/app/sites/organisation/organisation.component.html
+++ b/src/app/sites/organisation/organisation.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="py-5 mt-3">
+<div class="py-5 mt-3 page-container-min">
 
   <div class="container">
     <div class="row">
@@ -20,7 +20,7 @@
 
       <!-- page content start -->
 
-      <div class="img-content img-content-first">
+      <div class="img-content img-content-first ">
 
         <p>Studia podyplomowe prowadzone są według zasad określonych przez Ministerstwo Nauki i Szkolnictwa Wyższego i
           trwają dwa semestry, z których każdy obejmje 7 sobotnio-niedzielnych zjazdów. Program stanowi 301 godzin
@@ -59,15 +59,16 @@
         <!-- <div class="mask rgba-blue-light"></div> -->
       </div>
 
-      <div class="img-content">
+      <div class="img-content icon-content">
 
+        <!-- col-sm-12 col-md-5 order-sm-1 order-md-12 -->
         <div class="row left-col-icon">
-          <div class="col-1 icon-left">
+          <div class="col-sm-12 col-md-1 icon-left">
             <h2 class="h-article">
                 <i class="fa fa-users" aria-hidden="true"></i>
             </h2>
           </div>
-          <div class="col-11">
+          <div class="col-sm-12 col-md-11">
             <h2 class="h-article">Warunki uczestnictwa</h2>
 
             <p>Warunkami uczestnictwa w studiach podyplomowych "Technologie Internetowe" są:</p>
@@ -90,12 +91,12 @@
 
       <div class="img-content"> -->
         <div class="row left-col-icon">
-          <div class="col-1 icon-left">
+          <div class="wow col-sm-12 col-md-1 icon-left">
             <h2 class="h-article">
               <i class="fa fa-mortar-board" aria-hidden="true"></i>
             </h2>
           </div>
-          <div class="col-11">
+          <div class="col-sm-12 col-md-11">
             <h2 class="h-article">Warunki ukończenia studiów</h2>
 
             <p>Studenci w trakcie studiów są oceniani na podstawie wyników pisemnych egzaminów i zaliczeń z
@@ -121,12 +122,12 @@
       <div class="img-content"> -->
 
         <div class="row left-col-icon left-col-icon-last">
-          <div class="col-1 icon-left">
+          <div class="wow col-sm-12 col-md-1 icon-left">
             <h2 class="h-article">
               <i class="fa fa-dollar" aria-hidden="true"></i>
             </h2>
           </div>
-          <div class="col-11">
+          <div class="col-sm-12 col-md-11">
 
             <h2 class="h-article">Zasady odpłatności</h2>
 
