--- a/src/app/sites/panel/accounts/accounts.component.html
+++ b/src/app/sites/panel/accounts/accounts.component.html
@@ -31,7 +31,7 @@
 </nav>
 
 <div class="container-files">
-
+  <div class="table-responsive">
   <table mdbTable ><!-- striped="true" -->
     <thead *ngIf="!isLoadingData">
       <tr>
@@ -100,6 +100,5 @@
     </tr>
     </tbody>
   </table>
-
-
+  </div>
 </div>
