--- a/src/app/sites/recruitment/recruitment.component.html
+++ b/src/app/sites/recruitment/recruitment.component.html
@@ -157,14 +157,15 @@
         </div>
 
       </div>
-
+      <div class="icon-content">
+     
       <div class="row text-section left-col-icon zlozenie-dokumentow" id="step1">
-        <div class="col-1 icon-left">
+        <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
             <i class="fa fa-file-text-o" aria-hidden="true"></i>
           </h3>
         </div>
-        <div class="col-11">
+        <div class="col-sm-12 col-md-11">
 
           <h3 class="h-article">Wymagane dokumenty</h3>
 
@@ -185,12 +186,12 @@
 
       </div>
       <div class="row text-section left-col-icon" id="step2">
-        <div class="col-1 icon-left">
+        <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
           </h3>
         </div>
-        <div class="col-11">
+        <div class="col-sm-12 col-md-11">
 
           <h3 class="h-article">Złożenie dokumentów</h3>
 
@@ -208,12 +209,12 @@
 
       </div>
       <div class="row text-section left-col-icon" id="step3">
-        <div class="col-1 icon-left">
+        <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
             <i class="fa fa-user-circle-o" aria-hidden="true"></i>
           </h3>
         </div>
-        <div class="col-11">
+        <div class="col-sm-12 col-md-11">
 
           <h3 class="h-article">Logowanie na stronie studiów podyplomowych</h3>
 
@@ -224,6 +225,8 @@
           <p><a [routerLink]="['/login']">Przejdź do logowania</a></p>
 
         </div>
+      </div>
+         
       </div>
 
       <!-- END page content start -->
