--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-loading-bar></app-loading-bar>
 <header class="" id="header-top" [ngClass]="{'panel-nav' : isPanel, 'page-nav' : isPage}">
 
-  <mdb-navbar 
+  <mdb-navbar
+    #navbar
     SideClass="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar intro-fixed-nav"
     [containerInside]="true">
     <!--blue-->
@@ -57,8 +58,8 @@
           *ngIf="!authService.isLoggedIn()"
           mdbWavesEffect>
           <a class="nav-link">
+            <span class="mobile-only">Zaloguj </span>
             <i class="fa fa-user-circle-o" aria-hidden="true" mdbTooltip="Zaloguj" placement="bottom"></i>
-            <span class="mobile-only"> Zaloguj</span>
           </a>
         </li>
         <li
@@ -68,8 +69,8 @@
           *ngIf="authService.isLoggedIn()"
           mdbWavesEffect>
           <a class="nav-link">
+            <span class="mobile-only">Panel użytkownika </span>
             <i class="fa fa-user-circle-o" aria-hidden="true" mdbTooltip="Panel użytkownika" placement="bottom"></i>
-            <span class="mobile-only"> Panel użytkownika</span>
           </a>
         </li>
         <li
@@ -78,8 +79,8 @@
           *ngIf="authService.isLoggedIn()"
           mdbWavesEffect>
           <a class="nav-link">
+            <span class="mobile-only">Wyloguj ({{ user ? user.login : '' }}) </span>
             <i class="fa fa-sign-out" aria-hidden="true" mdbTooltip="Wyloguj ({{ user ? user.login : '' }})" placement="bottom"></i>
-            <span class="mobile-only"> Wyloguj ({{ user ? user.login : '' }})</span>
           </a>
         </li>
       </ul>
@@ -277,19 +278,21 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">Copyright © 2002 - 2018 Wydział Elektrotechniki i Informatyki,
+  <div class="footer-copyright text-center py-3">
+    Copyright © 2002 - 2018 Wydział Elektrotechniki i Informatyki,
     Politechnika Rzeszowska im. Ignacego Łukasiewicza
   </div>
   <div class="footer-copyright text-center py-3">Wszystkie prawa zastrzeżone</div>
 
 
   <!-- Copyright -->
+  
 
 </footer>
 <!-- Footer -->
 
-<!-- <div id="scroll-to-top" class="animated fadeIn" *ngIf="showScrollToTop">
+<div id="scroll-to-top" class="animated fadeIn" *ngIf="showScrollToTop">
   <a class="btn-floating btn-lg my-0 waves-effect waves-light" [ngx-scroll-to]="'#page-top'">
     <i class="fa fa-chevron-up"></i>
   </a>
-</div> -->
+</div>
