--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,4 +1,39 @@
+
+
 form {
-  width: 400px;
+  width: 100%;
+}
+
+@media (max-width: 575px) {
+}
+  
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  form {
+    width: 400px;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .contact-right-col {
+        margin-top: 0;
+    }
+    .adrress {
+        padding: 2em 0 0 0;
+        background-color: rgba(255,255,255,1);
+        text-align: left;
+        margin: 0 0;
+        height: 192px;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    
 }
 
