--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -12,16 +12,17 @@
   </div>
 </div>
 
-<div class="py-5 mt-3 page-container" id="about-container">
+<div class="py-5 mt-3 page-container-min" id="about-container">
 
   <div class="container">
     <div class="row" id="o-studiach-sections">
+      <div class="col-12">
 
       <!-- page content start -->
 
       <div class="img-section img-section-left">
 
-        <div class="row">
+        <div class="row no-gutters">
           <!--  wow fadeInLeft -->
           <div class="col-sm-12 col-md-5" data-wow-delay="0s">
             <!-- wow -->
@@ -168,6 +169,7 @@
       </div>
 
     </div>
+  </div>
   </div>
 
 </div>
