--- a/src/app/sites/panel/panel.component.html
+++ b/src/app/sites/panel/panel.component.html
@@ -21,13 +21,6 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12 col-xl-3">
-        <!--<nav class="nav flex-column lighten-3 py-4 mb-r font-weight-bold z-depth-1">-->
-          <!--<a class="nav-link active indigo-text" >Pliki</a>-->
-          <!--<a class="nav-link indigo-text" href="#">Link 1</a>-->
-          <!--<a class="nav-link indigo-text" href="#">Link 2</a>-->
-          <!--<a class="nav-link indigo-text" href="#">Link 3</a>-->
-
-          <!--</nav>-->
 
         <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar blue-gradient" id="toolbar">
           <!--<a class="navbar-brand" href="#"><strong>Pliki</strong></a>-->
@@ -59,7 +52,7 @@
         </nav>
 
       </div>
-      <div class="col-md-8 col-sm-12 col-xl-9">
+      <div class="col-md-8 col-sm-12 col-xl-9 content-container">
         <router-outlet></router-outlet>
       </div>
     </div>
