--- a/src/app/sites/programs/programs.component.html
+++ b/src/app/sites/programs/programs.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="py-5 mt-3">
+<div class="py-5 mt-3 page-container-min">
 
   <div class="container">
     <div class="row">
