Change home-1 bg

--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="full-bg-img">
     <div class="mask flex-center pattern-5"><!-- -->
       <div class="container">
-        <div class="white-text text-center wow fadeInUp" data-wow-delay="0.6s">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.6s">
 
           <div class="icon-slider" [ngClass]="{'animateLeftRight': startedHome1Animation}">
             <i class="bounce" [class]="activeIcon"></i>
