--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -176,12 +176,14 @@
 
 #home-1 {
   background-color: #2196f3;
-  background-image: url("/assets/stefan-stefancik-297983-unsplash.jpg");
-  background-position: 50% 45%;
+  // background-image: url("/assets/stefan-stefancik-297983-unsplash.jpg");
+  background-image: url("https://images.pexels.com/photos/914931/pexels-photo-914931.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-position: 0% 50%;
+  // background-size: 130%;
 }
 
 #home-1 {
-
+  color: rgba(255,255,255, 0.85);
 }
 
 #home-1 .icon-slider {
